updated sendgrid settings and register/forgotpassword view pages

--- a/OneListApplication/OneListApplication/Views/Home/DeleteUser.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/DeleteUser.cshtml
@@ -23,13 +23,13 @@
                 @{
                     if (ViewBag.Fail != null)
                     {
-                        <div class="text-danger col-md-offset-2 col-md-10">
+                        <div class="text-danger">
                             @Html.Raw(ViewBag.Fail)
                         </div>
                     }
                     else
                     {
-                        <div class="text-success col-md-offset-2 col-md-10">
+                        <div class="text-success">
                             @Html.Raw(ViewBag.Success)
                         </div>
                     }
