--- a/OneListApplication/OneListApplication/Views/Home/ForgotPassword.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ForgotPassword.cshtml
@@ -19,13 +19,13 @@
             @{
                 if (ViewBag.Fail != null)
                 {
-                    <div class="text-danger">
+                    <div class="text-danger text-center">
                         @Html.Raw(ViewBag.Fail)
                     </div>
                 }
                 else
                 {
-                    <div class="text-success">
+                    <div class="text-success text-center">
                         @Html.Raw(ViewBag.Success)
                     </div>
                 }
