--- a/OneListApplication/OneListApplication/Views/Home/Register.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Register.cshtml
@@ -32,10 +32,10 @@
                     <div class="text-center">
                         <button class="btn btn-bk btn-register" type="submit">Register</button><br />
                     </div>
+                    <p class="text-center">
+                        @Html.Raw(ViewBag.Result)
+                    </p>
                 }
-                <p class="message-align-center">
-                    @Html.Raw(ViewBag.Result)
-                </p>
             </div>
         </div>
     </div>
