--- a/OneListApplication/OneListApplication/Css/index.css
+++ b/OneListApplication/OneListApplication/Css/index.css
@@ -72,10 +72,6 @@ pre {
     padding: 10px 20px !important;
 }
 
-.message-align-center {
-    text-align: center;
-}
-
 /*  footer */
 footer {
     margin-top: 30px;
@@ -99,6 +95,9 @@ footer {
 }
 
 /* coupons */
+.pre-scrollable{
+    max-height: 600px !important;
+}
 #coupon > ul > div {
 
     border:1px solid slategray;
