fixed developer index page

--- a/OneListApplication/OneListApplication/Views/Developer/Index.cshtml
+++ b/OneListApplication/OneListApplication/Views/Developer/Index.cshtml
@@ -125,7 +125,7 @@
                     <div class="col-md-9">
                         <input type="text" id="txtDelete_CouponID" size="10" />
                         <input type="button" class="btn-bk" value="Delete" onclick="del();" />
-                        <p id="manufacturerDelete" />
+                        <p id="couponDelete" />
                     </div>
                 </div>
             </div>
