--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -65,28 +65,25 @@
                             <li><a href="#">List-Edit: Should be able to edit list name</a></li>
                             <li><a href="#">List-Edit: Should be able to edit list type</a></li>
                             <li><a href="#">List-Edit: Should be able to edit subscriber groups</a></li>
-                            <li><a href="#">API: Only show valid coupons, still showing expired ones</a></li>
                             <li><a href="#">API: Show Retailer on API(X)</a></li>
                             <li><a href="#">Handin: Make sure SQL document is up-to-date</a></li>
                             <li><a href="#">Handin: Update ERD for SQL, it's been modified</a></li>
                         </ul>
                         <p>Nick</p>
                         <ul>
-                            <li><a href="#">Validation: Add Validation/Error message for all</a></li>
-                            <li><a href="#">Validation: User Profile Edit no server side validation</a></li>
-                            <li><a href="#">Handin: Test installation for client with documentation shared</a></li>
+                            <li><a href="#">General: protect all pages when user not logged in</a></li>
+                            <li><a href="#">List Validation: add validation messages for list functions</a></li>
                             <li><a href="#">Handin: Check user functions, admin functions</a></li>
                             <li><a href="#">Handin: Check API functions</a></li>
+                            <li><a href="#">Handin: Clean Home.cshtml</a></li>
+                            <li><a href="#">Handin: Test installation for client with documentation shared</a></li>
                         </ul>
                         <p>Max</p>
                         <ul>
-                            <li><a href="#">Handin: Feed/Admin controller + Admin view folder cleanup</a></li>
-                            <li><a href="#">Handin: Check commented out codes</a></li>
-                            <li><a href="#">Handin: Clean Home.cshtml</a></li>
                             <li><a href="#">Handin: Formatting</a></li>
                             <li><a href="#">Handin: Packaging</a></li>
                             <li><a href="#">Handin: Clean Dummy data</a></li>
-                            <li><a href="#">Add ReadMe on Github/Packaging guide</a></li>
+                            <li><a href="#">Github: Add ReadMe on Github/Packaging guide</a></li>
                         </ul>
                     </div>
                 </div>
