--- a/OneListApplication/OneListApplication/Views/List/EditList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/EditList.cshtml
@@ -9,9 +9,11 @@
 <div class="col-md-8 col-sm-12">
     <p class="text-danger">
         @Html.Raw(ViewBag.ErrorMsg)
+        @Html.Raw(TempData["ErrorMsg"])
     </p>
     <p class="text-info">
         @Html.Raw(ViewBag.ActionMsg)
+        @Html.Raw(TempData["ActionMsg"])
     </p>
     <h2>Edit List</h2>
 
@@ -24,31 +26,77 @@
                         <hr />
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <input type="hidden" value="@Model.ListID" />
+                        @if (Model.UserType == 0 && Model.ListStatusID != 3)
+                        {
+                           
+                            <div class="col-md-6">
+                                @Html.LabelFor(model => model.ListName, htmlAttributes: new { @class = "control-label col-md-2" })
+                                @Html.EditorFor(model => model.ListName, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.ListName, "", new { @class = "text-danger" })
+                            </div>
 
-                        <div class="col-md-6">
-                            @Html.LabelFor(model => model.ListName, htmlAttributes: new { @class = "control-label col-md-2" })
-                            @Html.EditorFor(model => model.ListName, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" }  })
-                            @Html.ValidationMessageFor(model => model.ListName, "", new { @class = "text-danger" })
-                        </div>
+                            <div class="col-md-6">
+                                @Html.LabelFor(model => model.ListType, htmlAttributes: new { @class = "control-label col-md-2" })
+                                @Html.DropDownListFor(m => m.ListTypeID, Model.listTypes)
 
-                        <div class="col-md-6">
-                            @Html.LabelFor(model => model.ListType, htmlAttributes: new { @class = "control-label col-md-2" })
-                            @Html.EditorFor(model => model.ListType, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
-                            @Html.ValidationMessageFor(model => model.ListType, "", new { @class = "text-danger" })
-                        </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                @Html.LabelFor(model => model.SuscribergroupID, htmlAttributes: new { @class = "control-label col-md-2" })
+                                @Html.ListBoxFor(m => m.SuscribergroupID, Model.suscribergroups)
+
+                            </div>
 
 
-                        <div class="col-md-6">
-                            @Html.LabelFor(model => model.suscriberRole, htmlAttributes: new { @class = "control-label col-md-2" })
-                            @Html.EditorFor(model => model.suscriberRole, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
-                            @Html.ValidationMessageFor(model => model.suscriberRole, "", new { @class = "text-danger" })
-                        </div>
+                            <div class="col-md-6">
+                                @Html.LabelFor(model => model.suscriberRole, htmlAttributes: new { @class = "control-label col-md-2" })
+                                @Html.EditorFor(model => model.suscriberRole, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
+                                @Html.ValidationMessageFor(model => model.suscriberRole, "", new { @class = "text-danger" })
+                            </div>
 
-                        <div class="col-md-6">
-                            @Html.LabelFor(model => model.CreationDate, htmlAttributes: new { @class = "control-label col-md-2" })
-                            @Html.EditorFor(model => model.CreationDate, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
-                            @Html.ValidationMessageFor(model => model.CreationDate, "", new { @class = "text-danger" })
-                        </div>
+                            <div class="col-md-6">
+                                @Html.LabelFor(model => model.CreationDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                                @Html.EditorFor(model => model.CreationDate, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
+                                @Html.ValidationMessageFor(model => model.CreationDate, "", new { @class = "text-danger" })
+                            </div>
+
+                            <div class="col-md-6">
+                              @Html.EditorFor(model => model.ListID, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                            <div class="col-md-6">
+                                <input type="submit" value="Update List" class="btn btn-bk" />  
+                              </div>
+                        
+                        }
+                        else
+                        {
+                            <div class="col-md-6">
+                                @Html.LabelFor(model => model.ListName, htmlAttributes: new { @class = "control-label col-md-2" })
+                                @Html.EditorFor(model => model.ListName, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
+                                @Html.ValidationMessageFor(model => model.ListName, "", new { @class = "text-danger" })
+                            </div>
+
+                            <div class="col-md-6">
+                                @Html.LabelFor(model => model.ListType, htmlAttributes: new { @class = "control-label col-md-2" })
+                                @Html.EditorFor(model => model.ListType, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
+                                @Html.ValidationMessageFor(model => model.ListType, "", new { @class = "text-danger" })
+                            </div>
+
+
+                            <div class="col-md-6">
+                                @Html.LabelFor(model => model.suscriberRole, htmlAttributes: new { @class = "control-label col-md-2" })
+                                @Html.EditorFor(model => model.suscriberRole, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
+                                @Html.ValidationMessageFor(model => model.suscriberRole, "", new { @class = "text-danger" })
+                            </div>
+
+                            <div class="col-md-6">
+                                @Html.LabelFor(model => model.CreationDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                                @Html.EditorFor(model => model.CreationDate, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
+                                @Html.ValidationMessageFor(model => model.CreationDate, "", new { @class = "text-danger" })
+                            </div>
+
+                        }
+                        
                         <h3 style="float:left; width:100%; text-align: center; ">Tasks on List</h3>
                         <div class="form-group row">
                             <table id="tableitems" class="table">
@@ -56,7 +104,7 @@
                                     <tr>
                                         <th>Done</th>
                                         <th>List Item</th>
-                                        @if (Model.ListType == "groseries")
+                                        @if (Model.ListTypeID == 2)
                                         {
 
                                         <th>Price</th>
@@ -73,7 +121,7 @@
                                         <tr id="@item.ItemID">
                                             <td><input id="solved" type="checkbox" value="@item.ListItemSolved" checked="@item.ListItemSolved" /></td>
                                             <td>@item.listItemName</td>
-                                            @if (Model.ListType == "groseries")
+                                            @if (Model.ListTypeID == 2)
                                             {
                                                 <td><input id="cost" @item.ItemID type="text" value="@item.ListItemCost" /></td>
                                             }
