--- a/OneListApplication/OneListApplication/Views/List/EditList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/EditList.cshtml
@@ -27,67 +27,69 @@
                         @if (Model.UserType == 0 && Model.ListStatusID != 3)
                         {
                            
-                            <div class="col-md-6">
+                            <div class="col-md-12 form-group">
                                 @Html.LabelFor(model => model.ListName, htmlAttributes: new { @class = "control-label col-md-2" })
                                 @Html.EditorFor(model => model.ListName, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.ListName, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="col-md-6">
+                            <div class="col-md-12 form-group">
                                 @Html.LabelFor(model => model.ListType, htmlAttributes: new { @class = "control-label col-md-2" })
                                 @Html.DropDownListFor(m => m.ListTypeID, Model.listTypes)
 
                             </div>
 
-                            <div class="col-md-6">
+                            <div class="col-md-12 form-group">
                                 @Html.LabelFor(model => model.SuscribergroupID, htmlAttributes: new { @class = "control-label col-md-2" })
                                 @Html.ListBoxFor(m => m.SuscribergroupID, Model.suscribergroups)
 
                             </div>
 
 
-                            <div class="col-md-6">
+                            <div class="col-md-12 form-group">
                                 @Html.LabelFor(model => model.suscriberRole, htmlAttributes: new { @class = "control-label col-md-2" })
                                 @Html.EditorFor(model => model.suscriberRole, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
                                 @Html.ValidationMessageFor(model => model.suscriberRole, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="col-md-6">
+                            <div class="col-md-12 form-group">
                                 @Html.LabelFor(model => model.CreationDate, htmlAttributes: new { @class = "control-label col-md-2" })
                                 @Html.EditorFor(model => model.CreationDate, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
                                 @Html.ValidationMessageFor(model => model.CreationDate, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="col-md-6">
+                            <div class="col-md-12 form-group">
                               @Html.EditorFor(model => model.ListID, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                             </div>
-                            <div class="col-md-6">
-                                <input type="submit" value="Update List" class="btn btn-bk" />  
-                              </div>
+                            <div class="col-md-12 form-group">
+                                <div class="col-md-10 col-md-offset-2">
+                                    <input type="submit" value="Update List" class="btn btn-bk" />
+                                </div>
+                            </div>
                         
                         }
                         else
                         {
-                            <div class="col-md-6">
+                            <div class="col-md-12 form-group ">
                                 @Html.LabelFor(model => model.ListName, htmlAttributes: new { @class = "control-label col-md-2" })
                                 @Html.EditorFor(model => model.ListName, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
                                 @Html.ValidationMessageFor(model => model.ListName, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="col-md-6">
+                            <div class="col-md-12 form-group">
                                 @Html.LabelFor(model => model.ListType, htmlAttributes: new { @class = "control-label col-md-2" })
                                 @Html.EditorFor(model => model.ListType, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
                                 @Html.ValidationMessageFor(model => model.ListType, "", new { @class = "text-danger" })
                             </div>
 
 
-                            <div class="col-md-6">
+                            <div class="col-md-12 form-group">
                                 @Html.LabelFor(model => model.suscriberRole, htmlAttributes: new { @class = "control-label col-md-2" })
                                 @Html.EditorFor(model => model.suscriberRole, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
                                 @Html.ValidationMessageFor(model => model.suscriberRole, "", new { @class = "text-danger" })
                             </div>
 
-                            <div class="col-md-6">
+                            <div class="col-md-12 form-group">
                                 @Html.LabelFor(model => model.CreationDate, htmlAttributes: new { @class = "control-label col-md-2" })
                                 @Html.EditorFor(model => model.CreationDate, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @readonly = "readonly" } })
                                 @Html.ValidationMessageFor(model => model.CreationDate, "", new { @class = "text-danger" })
