changes on mastersql

--- a/OneListApplication/OneListApplication/Views/Home/GetDesignDocument.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/GetDesignDocument.cshtml
@@ -57,7 +57,7 @@
     <section>
         <h2>Use Case Diagram</h2>
         <p>To better demonstrate our features, the following Use Case Diagram is created to show the capabilities for users and admin. </p>
-        <iframe frameborder="0" style="width:100%;height:800px;" src="https://www.draw.io/?chrome=0&lightbox=1&highlight=0000ff&edit=_blank&layers=1&title=UseCaseDiagramOneList.html#Uhttps%3A%2F%2Fdrive.google.com%2Fuc%3Fid%3D0B_-vaLK_nw12NjN4QV9QVDdrVG8%26export%3Ddownload"></iframe>
+        <img src="~/images/FinalERDOneList.jpg" alt="ERD Final image" />
     </section>
     <section>
         <h2>ERD</h2>
