--- a/OneListApplication/OneListApplication/Views/List/EditList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/EditList.cshtml
@@ -110,7 +110,7 @@
                                         <th>Price</th>
                                         }
                                         <th>Notes</th>
-                                        <th>Solved By?</th>
+                                        <th>Solved By</th>
                                         <th></th>
                                     </tr>
                                 </thead>
