adding installation guide and changes to the design doc.

--- a/OneListApplication/OneListApplication/Views/Home/GetDesignDocument.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/GetDesignDocument.cshtml
@@ -57,16 +57,27 @@
     <section>
         <h2>Use Case Diagram</h2>
         <p>To better demonstrate our features, the following Use Case Diagram is created to show the capabilities for users and admin. </p>
-        <img src="~/images/FinalERDOneList.jpg" alt="ERD Final image" />
+        <iframe frameborder="0" style="width:100%;height:800px;" src="https://www.draw.io/?chrome=0&lightbox=1&highlight=0000ff&edit=_blank&layers=1&title=UseCaseDiagramOneList.html#Uhttps%3A%2F%2Fdrive.google.com%2Fuc%3Fid%3D0B_-vaLK_nw12NjN4QV9QVDdrVG8%26export%3Ddownload"></iframe>    
     </section>
     <section>
         <h2>ERD</h2>
         <p>The following ERD diagram shows the relationships between our models.</p>
-        <iframe frameborder="0" style="width:100%;height:800px;" src="https://www.draw.io/?chrome=0&lightbox=1&highlight=0000ff&title=ERDOneList%20v2.0.html#Uhttps%3A%2F%2Fdrive.google.com%2Fuc%3Fid%3D0B_-vaLK_nw12eG1TV2hrWFlibWc%26export%3Ddownload"></iframe>
+        <img src="~/images/FinalERDOneList.jpg" alt="ERD Final image" />
+        
     </section>
     <section>
         <h2>WebAPI for External Retail Coupons</h2>
         <p>The following document shows the scecifications for our Web API, for more information visit: <a href="http://takethisapart.com/onelist/Developer/index"> Developer's API Help</a></p>
         <iframe frameborder="0" style="width:100%;height:800px;" src="https://drive.google.com/open?id=1gBu6M8tqQXmPKHOPNYv13HTGze-Np4-aRD-jVAoGFhA"></iframe>
+    </section>
+    <section>
+        <h2>Platform requirements</h2>
+        <p>The following requirements are needed in order to install OneList:</p>
+        <ul>
+            <li>A Microsoft Internet Information Services Server (IIS) version 7 with  .NET framework 4.5 Installed</li>
+            <li>A SQL Server 2014 Server</li>
+            <li>A Sengrid Account.</li>
+            <li>A Google Recaptcha account.</li>
+        </ul>
     </section>
 </main>
