--- a/OneListApplication/OneListApplication/Views/List/EditList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/EditList.cshtml
@@ -172,9 +172,9 @@
             
             //get values for cost
             $txc=$("#"+id).closest('tr').find('input:text');
-            $.get("/List/UpdateItemList", {id:listID,itemID:parseInt(id),solved:$tx[0].checked,cost:$txc[0].value,notes:$txc[1].value}, function (data) {  
+            $.get("/onelist/List/UpdateItemList", {id:listID,itemID:parseInt(id),solved:$tx[0].checked,cost:$txc[0].value,notes:$txc[1].value}, function (data) {  
             
-                window.location.href="/List/EditList/"+listID;
+                window.location.href="/onelist/List/EditList/"+listID;
             });
         }
     </script>
