--- a/OneListApplication/OneListApplication/Views/List/ShowCompleteList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/ShowCompleteList.cshtml
@@ -57,7 +57,7 @@
                     </td>
 
                     <td data-title="Actions">
-                        @Html.ActionLink("Edit List", "EditList", "List", new { id = item.ListID }, new { @class = "btn btn-bk" })
+                        @Html.ActionLink("View List", "EditList", "List", new { id = item.ListID }, new { @class = "btn btn-bk" })
                     </td>
                 </tr>
             }
